# connectomic-heritability

./: .buildinfo  .gitignore  2-distances.html  3-data-plot.html  3-simulations.html  4-data-plot.html  5-distances-pavlues.html  6-hypothesis-testing.html  README.md  coverpage.html  genindex.html  objects.inv  placeholder.html  plots.html  preprocessing.html  pvalue-plot.html  pyproject.toml  sandbox.html  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/: 2-distances.ipynb  3-data-plot.ipynb  3-simulations.ipynb  4-data-plot.ipynb  6-hypothesis-testing.ipynb  coverpage.md  placeholder.ipynb  pvalue-plot.ipynb
_sources/slides/dbo/: dbo.md
_sources/slides/lab-2022/: lab-2022.md
_sources/slides/sfn22/: sfn22.md
data/: README.md  download_hcp.py
docs/: 2-distances.ipynb  3-data-plot.ipynb  3-simulations.ipynb  _config.yml  _toc.yml  average_graph.npy  coverpage.md  maximum_diff.npy  placeholder.ipynb  preprocessing.ipynb  sandbox.ipynb
docs/slides/: manifest.txt
docs/slides/dbo/: dbo.html  dbo.md  notes.md
docs/slides/lab-2022/: backdoor_paths.ai  lab-2022.md
docs/slides/sfn22/: sfn22.md
docs/slides/themes/: default.scss  poster.css  slides.css
pkg/: __init__.py  setup.py
pkg/io/: __init__.py  io.py
pkg/pkg/data/: __init__.py  load_data.py
pkg/pkg/inference/: __init__.py  lpt.py
pkg/pkg/io/: io.py
pkg/pkg/plot/: __init__.py  heatmap.py  plots.py  svg.py
pkg/pkg/utils/: utils.py
pkg/plot/: svg.py
scripts/: download_hcp.py
slides/dbo/: dbo.html  notes.html
slides/lab-2022/: lab-2022.html
slides/sfn22/: sfn22.html
