[tool.poetry]
name = "connectomic-heritability"
version = "0.1.0"
description = ""
authors = ["j1c <jaewonc78@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
graspologic = "^1.0.0"
hyppo = "^0.3.2"
jupyterlab = "^3.4.6"
svgutils = "^0.3.4"
pkg = {path = "pkg", develop = true}
boto3 = "^1.24.67"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
