[tool.poetry]
name = "connectomic-heritability"
version = "0.1.0"
description = ""
authors = ["j1c <jaewonc78@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
graspologic = { git = "https://github.com/microsoft/graspologic.git", branch = "dev"}
typing-extensions = ">=4.4.0"
hyppo = "^0.3.2"
jupyterlab = "^3.4.6"
svgutils = "^0.3.4"
pkg = {path = "pkg", develop = true}
boto3 = "^1.24.67"
black = "^22.8.0"
CairoSVG = "^2.6.0"
jupyterlab-code-formatter = "^1.5.3"
ipywidgets = "^8.0.4"
rpy2 = "^3.5.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
